--- a/talk_list.bib
+++ b/talk_list.bib
@@ -7,6 +7,7 @@
   booktitle      = {Tsinghua University, major project in course Learning from Data},
   year           = {2021},
   slides         = {https://lexiyutou.github.io/assets/pdf/pj_AIcoach4divers.pdf},
+  description    = {A smart AI Coach to help scuba divers to master the skill.},
   img            = {assets/img/talks/diver.png},
 }
 
@@ -16,6 +17,7 @@
   booktitle      = {Tsinghua University, major project in course Computational Photography},
   year           = {2021},
   slides         = {https://lexiyutou.github.io/assets/pdf/HDR.pdf},
+  description    = {Implemented the Debevec method and exposure fusion for multiframe HDR imaging; Investigated single-shot HDR reconstruction methods.},
   img            = {assets/img/talks/hdr.png},
 }
 
