--- a/publication_list.bib
+++ b/publication_list.bib
@@ -12,6 +12,16 @@
 @STRING{CAAI = {Commuynications of Chinese Association for Artificial Intelligence (CAAI)}}
 
 
+@article{yu2024densoft,
+  title={Den-SOFT: Dense Space-Oriented Light Field DataseT for 6-DOF Immersive Experience},
+  author={Yu, Xiaohang and Yang, Zhengxian and Pan, Shi and Han, Yuqi and Wang, Haoxiang and Zhang, Jun and Yu, Tao and Fang Lu},
+  journal={arXiv preprint arXiv:2309.01374},
+  img = {assets/img/publications/densoft.png},
+  html = {https://arxiv.org/abs/2403.09973},
+  year={2024},
+  booktitle = ARXIV,
+}
+
 @article{yu2023immersivenerf,
   title={ImmersiveNeRF: Hybrid Radiance Fields for Unbounded Immersive Light Field Reconstruction},
   author={Yu, Xiaohang and Wang, Haoxiang and Han, Yuqi and Yang, Lei and Yu, Tao and Dai, Qionghai},
@@ -21,6 +31,8 @@
   year={2023},
   booktitle = ARXIV,
 }
+
+
 
 
 @article{han2023super,
