--- a/publication_list.bib
+++ b/publication_list.bib
@@ -9,6 +9,7 @@
 @STRING{NEURIPS = {Advances in Neural Information Processing Systems (NeurIPS)}}
 @STRING{ARXIV = {arXiv}}
 @STRING{Drones = {Drones}}
+@STRING{TVCG = {TVCG}}
 @STRING{CAAI = {Commuynications of Chinese Association for Artificial Intelligence (CAAI)}}
 
 
@@ -25,11 +26,11 @@
 @article{yu2023immersivenerf,
   title={ImmersiveNeRF: Hybrid Radiance Fields for Unbounded Immersive Light Field Reconstruction},
   author={Yu, Xiaohang and Wang, Haoxiang and Han, Yuqi and Yang, Lei and Yu, Tao and Dai, Qionghai},
-  journal={arXiv preprint arXiv:2309.01374},
+  journal={IEEE TVCG},
   img = {assets/img/publications/immersivenerf.png},
-  html = {https://arxiv.org/abs/2309.01374},
-  year={2023},
-  booktitle = ARXIV,
+  html = {https://ieeexplore.ieee.org/document/10648850},
+  year={2024},
+  booktitle = TVCG,
 }
 
 
@@ -42,7 +43,7 @@
   img = {assets/img/publications/supernerf.png},
   html = {https://arxiv.org/abs/2304.13518},
   year={2023},
-  booktitle = ARXIV,
+  booktitle = TVCG,
 }
 
 @article{drones8010022,
