--- a/publication_list.bib
+++ b/publication_list.bib
@@ -18,7 +18,7 @@
   author={Yu, Xiaohang and Yang, Zhengxian and Pan, Shi and Han, Yuqi and Wang, Haoxiang and Zhang, Jun and Yu, Tao and Fang Lu},
   journal={arXiv preprint arXiv:2309.01374},
   img = {assets/img/publications/densoft.png},
-  html = {https://arxiv.org/abs/2403.09973},
+  html = {https://metaverse-ai-lab-thu.github.io/Den-SOFT/},
   year={2024},
   booktitle = ARXIV,
 }
