--- a/publication_list.bib
+++ b/publication_list.bib
@@ -9,7 +9,7 @@
 @STRING{NEURIPS = {Advances in Neural Information Processing Systems (NeurIPS)}}
 @STRING{ARXIV = {arXiv}}
 @STRING{Drones = {Drones}}
-@STRING{TVCG = {TVCG}}
+@STRING{TVCG = {IEEE Transactions on Visualization and Computer Graphics (TVCG)}}
 @STRING{CAAI = {Commuynications of Chinese Association for Artificial Intelligence (CAAI)}}
 
 
